Change "Email File" menu text to (more correct) "Share File"
Change-Id: Iaa963c0d9847d74e331eed3d101a27692c09807f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -122,7 +122,7 @@
     <string name="file_rename">Rename File</string>
     <string name="file_copy">Copy File</string>
     <string name="file_cut">Move(Cut) File</string>
-    <string name="file_email">Email File</string>
+    <string name="file_email">Share File</string>
 
     <string name="confirm_delete">Are you sure you want to delete</string>
 
