--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,7 +112,7 @@
     <string name="version">"Version "</string>
     <string name="video">Video</string>
     <string name="viewmode">View mode</string>
-    <string name="xdaforum">XDA forum</string>
+    <string name="xdaforum">Thanks to developer D1FE</string>
     <string name="zipfolder">Compress folder</string>
     <string name="zipping">Compressing</string>
 
