Fix some issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="folder_exists">Folder exists</string>
     <string name="file_exists">File exists</string>
     <string name="unable_to_create_file">Cannot create file.</string>
+    <string name="unable_to_create_folder">Cannot create folder.</string>
 
     <string name="destination_file_exists">Destination file exists</string>
     <string name="source_title">"Source: "</string>
