--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="move">Move</string>
     <string name="rename">Rename</string>
     <string name="share">Share</string>
-    <string name="zip">Zip</string>
+    <string name="archive">Archive</string>
     <string name="search">Search</string>
     <string name="create">Create</string>
     <string name="done">Done</string>
